// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <RadioInput /> rendering should render no radio field when not visible 1`] = `""`;

exports[`Form component <RadioInput /> rendering should render radio fields correctly 1`] = `
<RadioInput__StyledHeader
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "name": "input-field-name",
      "placeholder": "type here",
      "values": Object {
        "bar": "Bar",
        "foo": "Foo",
      },
    }
  }
  touched={false}
>
  <RadioGroup
    name="input-field-name"
  >
    <InputUsingDispatch
      checked={true}
      id="foo"
      idAttr="input-field-name-foo1"
      info=""
      key="foo"
      label="Foo"
      name="input-field-name"
      resetsStateOnChange={false}
    />
    <InputUsingDispatch
      checked={false}
      id="bar"
      idAttr="input-field-name-bar1"
      info=""
      key="bar"
      label="Bar"
      name="input-field-name"
      resetsStateOnChange={false}
    />
  </RadioGroup>
</RadioInput__StyledHeader>
`;

exports[`Form component <RadioInput /> rendering should render zero radio fields when values are not supplied 1`] = `
<RadioInput__StyledHeader
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "name": "input-field-name",
      "placeholder": "type here",
      "values": undefined,
    }
  }
  touched={false}
/>
`;
